@@ -18,3 +18,4 @@ Release notes for Version 1.24 (Sept 2015 -- )
 - fixed Crashhandler (Android)
 - fixed bug in RADIX() and fixed bug in arbint/arbfloat evaluation
 - fixed bug in FILL and ELLIPSE/PELLIPSE (for big screens)
+- fixed power operator in compiler for integer operands
